# wz

./: .gitignore  BENCH.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: bench.yml  cratesio.yaml  cratesio.yml  release.yml  test.yml
bench/: bench.sh
crates/wz-conf/: Cargo.toml  build.rs
crates/wz-conf/src/: config.rs  lib.rs
crates/wz-core/: Cargo.toml
crates/wz-core/src/: lib.rs
crates/wz-fmt/: Cargo.toml
crates/wz-fmt/src/: json.rs  lib.rs  table.rs
crates/wz-utf16/: Cargo.toml
crates/wz-utf16/src/: be.rs  le.rs  lib.rs
crates/wz-utf8/: Cargo.toml
crates/wz-utf8/benches/: resources.rs
crates/wz-utf8/src/: lib.rs
crates/wz-utf8/tests/: __resources__.rs  bytes.rs  chars.rs  lines.rs  max_line_length.rs  words.rs
crates/wz-utf8/tests/resources/: Lorem_big.txt  arabic.txt  french.txt  small.txt  spanish.txt  weird.txt  world192.txt
src/: builder.rs  main.rs  run.rs  sheath.rs
