[package]
name = "wz"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Count words, fast"
homepage = "https://github.com/Altair-Bueno/wz"
repository = "https://github.com/Altair-Bueno/wz"
readme = "README.md"
keywords = ["wc", "count", "words", "bytes", "lines"]
categories = ["command-line-utilities", "filesystem", "text-processing"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
wz-utf8 = { path = "crates/wz-utf8", features = ["runtime-dispatch-simd"], version = "1.0.0" }
wz-core = { path = "crates/wz-core", version = "1.0.0" }
wz-conf = { path = "crates/wz-conf", version = "1.0.0" }
wz-fmt = { path = "crates/wz-fmt", version = "1.0.0" }

bumpalo = { version = "3.11.0" }
rayon = "1.5.3"

[workspace]
members = ["crates/*"]
resolver = "2"

[profile.release]
opt-level = 2
debug = false
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
