[package]
name = "wz"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Count words, fast"
homepage = "https://github.com/Altair-Bueno/wz"
repository = "https://github.com/Altair-Bueno/wz"
readme = "README.md"
keywords = ["wc", "count", "words", "bytes", "lines"]
categories = ["command-line-utilities", "filesystem", "text-processing"]

[package.metadata.docs.rs]
all-features = true

[profile.release]
opt-level = 2
debug = false
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

[dependencies]
wz-utf8 = { workspace = true }
wz-core = { workspace = true }
wz-conf = { workspace = true }
wz-fmt  = { workspace = true }

bumpalo = { workspace = true }
rayon   = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
rayon = "1.6.0"
bumpalo = "3.11.0"
terminal_size = "0.2.3"
tabled = "0.10.0"
serde_json = "1.0.85"
bytecount = "0.6.3"
memchr = "2"

wz-utf8 = { path = "crates/wz-utf8", version = "1.0.0", features = ["runtime-dispatch-simd"] }
wz-core = { path = "crates/wz-core", version = "1.0.0" }
wz-conf = { path = "crates/wz-conf", version = "1.0.0" }
wz-fmt = { path = "crates/wz-fmt", version = "1.0.0" }

# Dev dependencies
criterion = { version = "0.4.0", features = ["html_reports"] }
rstest = "0.17.0"
speculoos = "0.11.0"

[workspace.dependencies.serde]
version = "1.0.148"
features = ["derive"]

[workspace.dependencies.clap]
version = "4.0"
default-features = false
features = [
  "std",
  "color",
  "suggestions",
  "derive",
  "wrap_help"
]
