[package]
name = "wz-conf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "3.2.20"
default-features = false
features = [
  "std",
  "color",
  "suggestions",
  "derive",
  "wrap_help"
]