[package]
name = "wz-conf"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Configuration options for wz"

[dependencies.clap]
version = "3.2.20"
default-features = false
features = [
  "std",
  "color",
  "suggestions",
  "derive",
  "wrap_help"
]

[build-dependencies]
clap_mangen = "0.1"
clap_complete = "3.2.4"

[build-dependencies.clap]
version = "3.2.20"
features = [ "derive" ]
