[package]
name = "wz-fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wz-core = { path = "../wz-core", version = "0.1.0" }
terminal_size = "0.2.1"
rayon = "1.5.3"
tabled = "0.8.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"