[package]
name = "wz-fmt"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Types for generating wz's output"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wz-core       = { workspace = true }
terminal_size = { workspace = true }
rayon         = { workspace = true }
tabled        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
