[package]
name = "wz-utf16"
version = "1.0.1"
edition = "2021"

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
# Nightly only
# generic-simd = ["bytecount/generic-simd"]

[dependencies]
wz-core   = { workspace = true }
bytecount = { workspace = true }
memchr    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
speculoos = { workspace = true }
rstest    = { workspace = true }
