[package]
name = "wz-utf8"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "TBD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
# Nightly only
# generic-simd = ["bytecount/generic-simd"]

[dependencies]
wz-core = { path = "../wz-core", version = "0.1.0" }
bytecount = "0.6.3"
rstest = "0.15.0"
speculoos = "0.9.0"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "resources"
harness = false
features = ["runtime-dispatch-simd"]
