[package]
name = "wz-utf8"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "UTF-8 counters for wz"
categories = ["no-std"]

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
# Nightly only
# generic-simd = ["bytecount/generic-simd"]

[dependencies]
wz-core = { path = "../wz-core", version = "0.1.0" }
bytecount = "0.6.3"
memchr = "2"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }
rstest = "0.15.0"
speculoos = "0.9.0"

[[bench]]
name = "resources"
harness = false
required-features = ["runtime-dispatch-simd"]
