[package]
name = "wz-utf8"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "UTF-8 counters for wz"
categories = ["no-std"]

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
# Nightly only
# generic-simd = ["bytecount/generic-simd"]

[dependencies]
wz-core   = { workspace = true }
bytecount = { workspace = true }
memchr    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
speculoos = { workspace = true }
rstest    = { workspace = true }

[[bench]]
name = "resources"
harness = false
required-features = ["runtime-dispatch-simd"]
